data/derived/fa15/progs/unify/prog0367.ml.out
Characters 105-107:
  | Sine e'	      -> sin(eval (e' x y))
                               ^^
Error: This expression has type expr
       This is not a function; it cannot be applied.
